Optimized css and fixed response view on mobile.

--- a/style.css
+++ b/style.css
@@ -1,45 +1,35 @@
 body {
     font-family: 'Lato', sans-serif;
-    font-size: 2rem;
-    display: flex;
-    flex-direction: column;
-    max-width: 70rem;
-    margin: 0 auto;
-    padding: 0 0.9375rem;
-    justify-content: center;
-    align-items: center;
+    font-size: 1.5rem;
+    display: grid;
+	padding: 2rem;
     /*For centering */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: 0.5s;
+    place-items : center;
+    margin-top: 10px;
+}
+@media screen and (min-width: 400px){
+    body {margin-top: 70px; }
 }
 h1 {
-    align-self: center;
     font-style: italic;
     transition: 0.5s;
 }
 article {
-    display: flex;
-    flex-direction: column;
     transition: 0.5s;
 }
 .switch {
-    align-self: center;
-    justify-content: center;
-    margin: 0.9375rem;
+    margin: 1rem;
 }
 .inner-switch {
     display: inline-block;
     cursor: pointer;
-    border: 1px solid #555;
-    border-radius: 1.25rem;
-    width: 3.125rem;
-    text-align: center;
-    font-size: 2rem;
-    padding: 0.1875rem;
-    margin-left: 0.3125rem;
+    border: 2px solid #555;
+    border-radius: 2rem;
+    width: 3.1rem;
+    font-size: 2.25rem;
+    padding: 0.2rem;
+    margin-left: 0.5rem;
+	padding-bottom: 0.4rem;
 }
 .dark,
 .dark * {
